5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4081/executions/1728_2496.log
== TEST (2019-05-13 18:41:23) 
-- CODE:
cont=0
soma=0
num=int(input("numero:"))
while(soma != -1)
	soma = soma + num 
	cont = cont + 1 
	num = int(input("digite o numero: "))
	
	
if(cont>0):
	print(round(soma,2))
-- ERROR:
File "XXXX", line 4
    while(soma != -1)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:41:29) 
-- CODE:
cont=0
soma=0
num=int(input("numero:"))
while(soma != -1):
	soma = soma + num 
	cont = cont + 1 
	num = int(input("digite o numero: "))
	
	
if(cont>0):
	print(round(soma,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:41:34) 
-- CODE:
cont=0
soma=0
num=int(input("numero:"))
while(soma != -1):
	soma = soma + num 
	cont = cont + 1 
	num = int(input("digite o numero: "))
	
	
if(cont>0):
	print(round(soma,2))
-- EXECUTION TIME:
0.152234
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1728/2496/main.py", line 7, in <module>
    num = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:41:47) 
-- CODE:
cont=0
soma=0
num=int(input("numero:"))
while(soma != -1):
	
	soma = soma + num 
	cont = cont + 1 
	num = int(input("digite o numero: "))
	
if(cont>0):
	print(round(soma,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:41:49) 
-- CODE:
cont=0
soma=0
num=int(input("numero:"))
while(soma != -1):
	
	soma = soma + num 
	cont = cont + 1 
	num = int(input("digite o numero: "))
	
if(cont>0):
	print(round(soma,2))
-- EXECUTION TIME:
0.153095
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1728/2496/main.py", line 8, in <module>
    num = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:42:42) 
-- CODE:
cont=0
soma=0
num=int(input("numero:"))
while(num != -1):
	
	soma = soma + num 
	cont = cont + 1 
	num = int(input("digite o numero: "))
	
if(cont>0):
	print(round(soma,2))
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:42:51) 
-- CODE:
cont=0
soma=0
num=int(input("numero:"))
while(num != -1):
	
	soma = soma + num 
	cont = cont + 1 
	num = int(input("digite o numero: "))
	
if(cont>0):
	print(round(soma,2))
-- EXECUTION TIME:
0.185756
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
